# cpp-cifar-10-reader

./: CMakeLists.txt  LICENSE  README.md  demo.cpp
cifar-10_reader/: cifar-10_reader.cpp  cifar-10_reader.h
